<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.apptask.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.EnterMobileInfoFragment">

        <include
            android:id="@+id/include"
            layout="@layout/my_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/enter_your_mobile_number"
            android:textColor="@color/black"
            android:textSize="@dimen/_30ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />


        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/hello_welcome_back_to_our_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintStart_toStartOf="@id/tv_enter"
            app:layout_constraintTop_toBottomOf="@id/tv_enter" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_20sdp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#12FF7F5D"
                android:padding="@dimen/_3sdp"
                app:ccp_contentColor="#858383"
                app:ccp_showNameCode="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_phn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autofillHints=""
                android:layout_marginStart="@dimen/_9sdp"
                android:background="#12FF7F5D"
                android:inputType="number"
                android:hint="@string/_00000_00000"
                android:text="@={viewmodel.number}"
                android:letterSpacing="0.5"
                android:padding="@dimen/_3sdp"
                app:layout_constraintBottom_toBottomOf="@+id/ccp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ccp"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:backgroundTint="#5046BB"
                android:paddingVertical="@dimen/_11sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/request_otp"
                android:onClick="@{()->viewmodel.generateOTP()}"
                android:textAllCaps="false"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_phn" />

            <LinearLayout
                android:id="@+id/ll_login_with"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:layout_marginHorizontal="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:background="#54B5B2B2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_with"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="#54B5B2B2" />


            </LinearLayout>

            <TextView
                android:id="@+id/tv_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_noborder"
                android:drawableStart="@drawable/google"
                android:drawablePadding="@dimen/_8sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/google"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintEnd_toStartOf="@id/btn_fb"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_login_with" />

            <TextView
                android:id="@+id/btn_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_noborder"
                android:drawableStart="@drawable/facebook"
                android:drawablePadding="@dimen/_8sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/facebook"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_google"
                app:layout_constraintTop_toTopOf="@+id/tv_google" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:padding="0dp"
            android:text="@string/condition"
            android:textAlignment="center"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>