<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.SplashFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:src="@drawable/group_36618"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/find_nearest"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_40ssp"
        android:layout_height="@dimen/_40ssp"
        android:src="@drawable/a1"
        android:contentDescription="@string/smlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="@dimen/_60ssp"
        android:layout_height="@dimen/_60ssp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:src="@drawable/a3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        android:contentDescription="@string/smlogo" />

    <ImageView
        android:layout_width="@dimen/_45ssp"
        android:layout_height="@dimen/_45ssp"
        android:layout_marginStart="@dimen/_27sdp"
        android:src="@drawable/a7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img"
        android:contentDescription="@string/smlogo" />

    <ImageView
        android:id="@+id/img1"
        android:layout_width="@dimen/_45ssp"
        android:layout_height="@dimen/_45ssp"
        android:layout_marginStart="@dimen/_20sdp"
        android:src="@drawable/a4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:contentDescription="@string/smlogo" />

    <ImageView
        android:id="@+id/img3"
        android:layout_width="@dimen/_55ssp"
        android:layout_height="@dimen/_55ssp"
        android:layout_marginEnd="@dimen/_27sdp"
        android:src="@drawable/a2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img1"
        android:contentDescription="@string/smlogo" />

    <ImageView
        android:layout_width="@dimen/_40ssp"
        android:layout_height="@dimen/_40ssp"
        android:src="@drawable/a6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img3"
        android:contentDescription="@string/smlogo"
        tools:ignore="VisualLintBounds" />


</androidx.constraintlayout.widget.ConstraintLayout>